# Alloy-V0

./: Dockerfile  frontend_architecture_prd_v2.md  main.py  pyproject.toml  requirements.txt  start_app.sh
api/: hyrox_routes.py  movement_routes.py  routes.py
backups/: Jacked-DB_backup_20260301_132419.sql  Jacked-DB_backup_20260301_132446.sql  Jacked-DB_backup_20260301_132530.sql  Jacked-DB_backup_20260301_132729.dump  Jacked-DB_backup_20260301_132729.sql  Jacked-DB_backup_20260301_190134.dump  Jacked-DB_backup_20260301_190134.sql
config/: database.py  goal_normalization.yaml  program_building_config.yaml  program_config.yaml  program_config_enhanced.yaml
docs/: REFACTORING_YAML_SINGLE_SOURCE_OF_TRUTH.md  hyrox_staging_schema.md  hyrox_staging_schema_refined.md
frontend/: .env.example  Dockerfile  frontend_implementation_plan.md  nginx.conf  package-lock.json  package.json  vite.config.ts
logs/: error_logs.json  error_logs.jsonl
migrations/: 20260227_enhance_pattern_column.sql  20260227_pattern_enhancement_backup.sql  20260228_add_core_conditioning_mobility_patterns.sql  20260228_add_hyrox_movements.sql  20260228_create_hyrox_staging_tables.sql  20260228_create_hyrox_staging_tables_UP.sql  20260228_hyrox_staging_6_tables.sql  20260228_hyrox_staging_6_tables_up_only.sql  20260228_merge_duplicate_movements.sql  20260228_post_update_validation.sql  20260228_pre_update_backup.sql  20260228_rollback.sql  20260301_add_hyrox_movements.sql  20260301_add_rounds_and_circuit_flag.sql  20260301_create_hyrox_production_tables.sql  20260301_recreate_hyrox_staging_tables.sql  (+6 more)
(+182 files in other folders)
